<resources>
    <string name="app_name">Dispositivos-IT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dispositivos IT ISC91</string>
    <string name="nav_header_subtitle">======================</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Timbre Inteligente</string>
    <string name="menu_slideshow">Temperatura cuarto</string>
    <string name="menu_persianas">Persianas</string>
    <string name="menu_alarmabebe">Alarma del bebe</string>
    <string name="menu_alarma">Alarma de presencia</string>
    <string name="menu_jardin">Jardin</string>
    <string name="menu_falta">falta</string>
    <string name="menu_dispensador">Dispensador</string>
    <string name="menu_humo">Detector de humo</string>
    <string name="menu_gas">Gas</string>
    <string name="menu_Seguridad">Seguridad de puerta</string>
    <string name="menu_sisterna">Sisterna</string>
    <string name="menu_tinaco">Tinaco Inteligente</string>
    <string name="menu_luces">Control de Iluminacion</string>
    <string name="menu_consumoluz">Control de Electricidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>